--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".nowplaying.view.NowPlayingFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/listView"
-            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/listView"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"></android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/noDataText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/no_data_str"
+                android:textColor="@android:color/holo_red_dark"
+                android:visibility="gone" />
+        </RelativeLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <TextView
-        android:id="@+id/noDataText"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:textColor="@android:color/holo_red_dark"
-        android:text="@string/no_data_str"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
